@@ -1,0 +1,8 @@
+-- { dg-do compile }
+-- { dg-options "-O" }
+
+package Concat2 is
+
+   procedure Browse;
+
+end Concat2;
