@@ -1,3 +1,7 @@
+2012-03-25  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/concat2.ad[sb]: New test.
+
 2012-03-24  Steven Bosscher  <steven@gcc.gnu.org>
 
 	PR middle-end/52640
