@@ -1,3 +1,9 @@
+2012-03-25  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc-interface/decl.c (SS_MARK_NAME): New define.
+	(gnat_to_gnu_entity) <E_Function>: Prepend leaf attribute on entities
+	whose name is SS_MARK_NAME.
+
 2012-03-22  Release Manager
 
 	* GCC 4.7.0 released.
